openshift/base/store/store-mysql-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    com.xebialabs.service: store-mysql
  name: store-mysql
spec:
  replicas: 1
  selector:
    com.xebialabs.service: store-mysql
  strategy:
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        com.xebialabs.service: store-mysql
    spec:
      containers:
      - env:
        - name: MYSQL_USER
          value: store_user
        - name: MYSQL_PASSWORD
          value: changeit
        - name: MYSQL_ROOT_PASSWORD
          value: changeit
        - name: MYSQL_DATABASE
          value: store
        image: centos/mysql-57-centos7
        name: store-mysql
        restartPolicy: Always
        ports:
        - name: mysql
          containerPort: 3306
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - '-i'
              - '-c'
              - >-
                MYSQL_PWD="$MYSQL_PASSWORD" mysql -h localhost -u $MYSQL_USER -D $MYSQL_DATABASE -e 'SELECT 1'
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 3306
          timeoutSeconds: 1
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: store-mysql-claim0
      volumes:
      - name: store-mysql-claim0
        emptyDir: {}
