openshift/base/store/store-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    com.xebialabs.service: store-app
  name: store-app
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    com.xebialabs.service: store-app
