openshift/base/store/store-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    com.xebialabs.service: store-mysql
  name: store-mysql
spec:
  ports:
  - name: "mysql"
    port: 3306
    targetPort: 3306
  selector:
    com.xebialabs.service: store-mysql
