openshift/base/store/store-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    com.xebialabs.service: store-app
  name: store-app
spec:
  port:
    targetPort: '8080'
  to:
    kind: Service
    name: store-app
    weight: 100
  wildcardPolicy: None
